Finished button actually had a bug, fixed bug and changed filled state readability

--- a/src/Playing.module.css
+++ b/src/Playing.module.css
@@ -50,27 +50,27 @@
   width: 100%;
 }
 
-/* .inputsForm input {
-  margin-bottom: 10px;
-  background-color: #ccc;
-  border-style: none;
-  border-radius: 5px;
-  height: 30px;
-  width: 100%
-} */
 
 .inputsComplete{
   margin-bottom: 10px;
-  background-color: #ccc;
+  background-color: #E2DFEE;
   border-style: none;
   border-radius: 5px;
   height: 30px;
   width: 100%
 }
 
+.inputsComplete:focus {
+  background-color: #FDFCFF;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #595F92;
+  outline: none;
+}
+
 .inputsError{
   margin-bottom: 10px;
-  background-color: #ccc;
+  background-color: #FDFCFF;
   border-style: solid;
   border-color: red;
   border-width: 5px;
@@ -79,30 +79,31 @@
   width: 100%
 }
 
-/* .inputsForm button {
-  margin-left: 5px;
-  height: 30px;
-  border-style: none;
-  cursor: pointer;
-} */
-/* 
-.submitButton {
-  align-self: flex-start;
-  cursor: pointer;
-} */
+.inputsError:focus {
+  outline: none;
+}
 
-.inputsButtonEnabled{
+.finishedButtonContainer{
+  width:100%;
+  display:flex;
+  justify-content: center;
+}
+.finishedButtonEnabled{
   background-color: #0C185C;
   color:#B6A4FF;
   margin-left: 5px;
-  height: 300px;
+  height: 40px;
+  width:80%;
   border-style: none;
+  border-radius: 7px;
   cursor: pointer;
 }
 
-.inputButtonDisabled{
+.finishedButtonDisabled{
   margin-left: 5px;
-  height: 30px;
+  height: 40px;
+  width:80%;
   border-style: none;
+  border-radius: 7px;
   cursor: pointer;
 }
